docs/examples/invalid/semanticErr/extension/switch/invalidSimpleSwitch.wacc
begin
  switch {
  case false:
    println "false"
  case true:
    println "false"
  case 2:
    println "false"
  default:
    println "true"
  }
end
